day20-k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: meetmux
  template:
    metadata:
      labels:
        app: meetmux
    spec:
      containers:
      - name: nodejs-container
        image: nginx   # using nginx for testing
        ports:
        - containerPort: 80
