day20-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
spec:
  selector:
    app: meetmux
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
